--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-<div id="app1">
-	<h1>{{Herder}}</h1>
-	<ul>
-		<li v-for="(value, key) in title" style="list-style-type:none">
-			<h3>{{ key }}</h3>
-			<ul>
-				<li v-for="(item, key) in value" style="list-style-type:none"> 
-					<h4>{{ key }}. {{ item }}</h4> 
-				</li>
-			</ul>
-		</li>
-	</ul>
-</div>
+	<div class="row" >
+		<div class="col-md-6" style="max-height: 100vh;overflow: scroll">
+			<div id="app1">
+				<h1>{{Herder}}</h1>
+				<ul>
+					<li v-for="(value, key) in title" style="list-style-type:none">
+						<h3>{{ key }}</h3>
+						<ul>
+							<li v-for="(item, key) in value" style="list-style-type:none"> 
+								<h4>{{ key }}. {{ item }}</h4> 
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-md-6">
+				ice
+		</div>
+
+	</div>
+
 </body>
 <script type="text/javascript" src="lib/js/vue.js"></script>
 <script type="text/javascript">
