load file bootstrap local OK

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>vue.js</title>
 	<link rel="icon" href="https://vuejs.org/images/logo.png" type="image/x-icon">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="lib/css/bootstrap.min.css"/>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -91,8 +91,8 @@
 					'2':"สามารถกำหนดสีของตัวอักษรได้"
 				},
 				"6) Authentication":{
-					'1':"สามารภทำการ Sing in ได้",
-					"2":"สามารภทำการ Sing out ได้"
+					'1':"สามารภทำการ Sign in ได้",
+					"2":"สามารภทำการ Sign out ได้"
 				},
 				"7) Register":{
 					'1':"สามารถ สมัครสมาชิกได้"
